@@ -2672,10 +2672,9 @@ extern __inline__ PVOID GetCurrentFiber(void)
 {
     void* ret;
     __asm__ volatile (
-	      "movl	%%fs:0x10,%0"
-	        : "=r" (ret) /* allow use of reg eax,ebx,ecx,edx,esi,edi */
-	        :
-		);
+	"movl	%%fs:0x10,%0"
+	: "=r" (ret) /* allow use of reg eax,ebx,ecx,edx,esi,edi */
+	);
     return ret;
 }
 
@@ -2684,11 +2683,10 @@ extern __inline__ PVOID GetFiberData(void)
 {
     void* ret;
     __asm__ volatile (
-	      "movl	%%fs:0x10,%0\n"
-	      "movl	(%0),%0"
-	       : "=r" (ret) /* allow use of reg eax,ebx,ecx,edx,esi,edi */
-	       :
-	      );
+	"movl	%%fs:0x10,%0\n"
+	"movl	(%0),%0"
+	: "=r" (ret) /* allow use of reg eax,ebx,ecx,edx,esi,edi */
+	);
     return ret;
 }
 
